--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,10 @@ dependencies:
   flutter:
     sdk: flutter
 
-  dio: ^4.0.0
-  flutter_polyline_points: ^0.2.6
-  google_maps_flutter: ^2.1.9
+  dio: ^4.0.6
+  flutter_polyline_points: ^1.0.0
+  google_maps_flutter: ^2.1.10
+  geolocator: ^9.0.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
