--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,9 @@ dependencies:
   flutter_polyline_points: ^1.0.0
   google_maps_flutter: ^2.1.10
   geolocator: ^9.0.1
-  geocoding: ^2.0.4
+  google_fonts: ^3.0.1
+  flutter_google_places: ^0.3.0
+  google_maps_webservice: ^0.0.20-nullsafety.5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
