--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,4 +1,4 @@
-name: Super-Linter
+name: Lint Code Base
 
 # Controls when the workflow will run
 on:
@@ -10,9 +10,9 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "super-lint"
+  # This workflow contains a single job with job_id "super-lint"
   super-lint:
-    name: Lint code base
+    name: Super Lint
     
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
