--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -35,6 +35,6 @@
             android:name="flutterEmbedding"
             android:value="2" />
         <meta-data android:name="com.google.android.geo.API_KEY"
-               android:value="AIzaSyDL9eAX8Wt-5QIAbA5JUalqDQ_6MR0to6k"/>
+               android:value="@string/GOOGLE_MAPS_API_KEY"/>
     </application>
 </manifest>
