--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_config: ^2.0.0
 
   dio: ^4.0.6
   flutter_polyline_points: ^1.0.0
